--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -1,5 +1,5 @@
 <app-header (toggleSideBarEvent)='toggleSideBar($event)'></app-header>
-<mat-drawer-container id="main">
+<mat-drawer-container id="mainContainer">
     <mat-drawer mode="side" [opened]="isSideBarOpened">
         <app-sidebar></app-sidebar>
     </mat-drawer>
