--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,38 +1,39 @@
 <mat-nav-list>
     <div class="profile-card">
+        <img src="https://ichef.bbci.co.uk/news/1024/branded_news/2051/production/_111037280_gettyimages-85209802.jpg"
+         alt="redpanda">
         <div class="header">
             <h4>{{user.username}}</h4>
             <h6>{{user.email}}</h6>
         </div>
-        <img src="https://ichef.bbci.co.uk/news/1024/branded_news/2051/production/_111037280_gettyimages-85209802.jpg"
-         alt="redpanda">
     </div>
     <mat-divider></mat-divider>
-    <h2 matSubheader>Pages</h2>
+    <h2 matSubheader>{{ 'pages.title' | translate }}</h2>
     <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
-        <mat-icon>dashboard</mat-icon>Dashboard</a>
-    <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >Post</a>
+        <mat-icon>dashboard</mat-icon>{{'dashboard.title' | translate}}
+    </a>
     <a mat-list-item [routerLink]="['/tasks']" routerLinkActive="list-item-active" >
-       <mat-icon>assignment</mat-icon>{{ 'task.title' | translate }}</a>
-    <a mat-list-item [routerLink]="['/icons']" routerLinkActive="list-item-active" >Icons</a>
-    <mat-divider></mat-divider>
-    <h2 matSubheader>Tools</h2>
-    <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
-        <mat-icon>import_contacts</mat-icon>
+        <mat-icon>assignment</mat-icon>{{ 'task.title' | translate }}
     </a>
-    <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
-        <mat-icon>contact_phone</mat-icon>
+    <a mat-list-item [routerLink]="['/calendar']" routerLinkActive="list-item-active">
+        <mat-icon>calendar_today</mat-icon>{{'calendar.title' | translate}}
     </a>
-    <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
-        <mat-icon>timeline</mat-icon>
+    <a mat-list-item [routerLink]="['/posts']" routerLinkActive="list-item-active" >
+      <mat-icon>note</mat-icon>{{ 'posts.title' | translate}}
     </a>
     <mat-divider></mat-divider>
     <h2 matSubheader>Tools</h2>
     <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
-        <mat-icon>import_contacts</mat-icon>
+        <mat-icon>import_contacts</mat-icon>Contact
     </a>
     <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
-        <mat-icon>contact_phone</mat-icon>
+        <mat-icon>contact_phone</mat-icon>Phone
+    </a>
+    <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
+        <mat-icon>timeline</mat-icon>Timeline
+    </a>
+    <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
+      <mat-icon> monetization_on</mat-icon> Money
     </a>
 </mat-nav-list>
 
