--- a/src/app/shared/widgets/card/card.component.html
+++ b/src/app/shared/widgets/card/card.component.html
@@ -3,7 +3,7 @@
     <h5>{{ label }}</h5>
     <span class="total">{{total}}</span>
     <span>
-        <mat-icon color="primary">trending_up</mat-icon>
+        <mat-icon color="accent">trending_up</mat-icon>
     </span>
     <span class="description">
         {{ percentage }}%
