--- a/src/app/layouts/default/default.component.scss
+++ b/src/app/layouts/default/default.component.scss
@@ -5,12 +5,13 @@
 }
 
 mat-drawer{
-    width: 300px;
+    width: 230px;
 }
 
-#main{
-    height: 90%;
+#mainContainer{
+    flex: 1 1 auto;
 }
+
 mat-drawer-content{
     padding: 20px;
 }
