--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,60 +1,54 @@
-<div style="width: 100%; padding: 20px; display: flex;">
-    <form *ngIf="!isLoggedIn" name="form" #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()" novalidate>
-    <h3 color="primary">{{'login.title' | translate}}</h3>
+<div class="d-flex w-100 p-20">
+    <form  name="form" #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()" novalidate class="w-100">
+        <h3>{{'login.title' | translate}}</h3>
         <!-- Username input -->
         <div>
-            <mat-form-field color="accent" appearance="standard" style="min-width: 500px;">
+            <mat-form-field color="accent" appearance="standard" class="input-field">
             <mat-label>{{ 'username.title' | translate }}</mat-label>
                 <input matInput name="username" placeholder="{{ 'username.placeholder' | translate }}" minlength="3"
-                [(ngModel)]="form.username" required #username="ngModel" maxlength="20"
-                >
+                [(ngModel)]="form.username" required #username="ngModel" maxlength="20">
                 <mat-hint>{{ 'username.hint' | translate }}</mat-hint>
                 <mat-error align="end" *ngIf="username.errors?.required">{{'username.required' | translate}}</mat-error>
                 <mat-error align="end" *ngIf="username.errors?.minlength">{{'username.minLength' | translate}}</mat-error>
             </mat-form-field>
         </div>
-        
         <!-- Password input -->
         <div>
-            <mat-form-field color="accent" appearance="standard" style="min-width: 500px;">
+            <mat-form-field color="accent" appearance="standard" class="input-field">
                 <mat-label>{{ 'password.title' | translate }}</mat-label>
-                <input [type]="hide ? 'password' : 'text'" name="password" matInput placeholder="{{'password.placeholder' | translate}}" minlength="6"
-                [(ngModel)]="form.password" required #password="ngModel"
-               >
-                <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                    </button>
+                <input [type]="hidePassword ? 'password' : 'text'" name="password" matInput 
+                    placeholder="{{'password.placeholder' | translate}}"
+                    minlength="6" [(ngModel)]="form.password" required #password="ngModel">
+                <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword" 
+                    [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+                    <mat-icon matTooltip="{{hidePassword ? ('password.show' | translate) : ('password.hide' | translate)}}">
+                        {{hidePassword ? 'visibility_off' : 'visibility'}}
+                    </mat-icon>
+                </button>
                 <mat-hint>{{'password.hint' | translate}}</mat-hint>
                 <mat-error align="end" *ngIf="password.errors?.required">{{'password.required' | translate}}</mat-error>
                 <mat-error align="end" *ngIf="password.errors?.minlength">{{'password.minLength' | translate}}</mat-error>
             </mat-form-field>
         </div>
-        <div style="margin-top: 20px;">
-            <mat-progress-bar mode="indeterminate" *ngIf="isShowSpinner" class="mt-4"></mat-progress-bar>
+        <div class="mt-20 input-field">
+            <mat-progress-bar mode="indeterminate" *ngIf="isShowSpinner"></mat-progress-bar>
         </div>
-        <div style="margin-top: 20px">
-            <button color="primary" mat-raised-button style="width: 200px;" [disabled]="isLoginButtonDisabled">
+        <div class="mt-20">
+            <button color="primary" mat-raised-button class="input-field" [disabled]="isLoginButtonDisabled">
                 {{ 'login.title' | translate}}
             </button>
         </div>
-        <div *ngIf="f.submitted && isLoginFailed">
-            <mat-error>{{'login.error' | translate}} {{ errorMessage }}</mat-error>
+        <div *ngIf="f.submitted && isLoginFailed" class="mt-20 input-field">
+            <mat-error fxFlex fxLayoutGap="10px" fxLayoutAlign="start center">
+                <mat-icon >error</mat-icon>
+                <span>{{'login.error' | translate}}: {{ errorService.getErrorMessage(errorCode) }}</span>
+            </mat-error>
+        </div>
+        <div class="mt-20 input-field" *ngIf="isLoggedIn">
+            <div fxFlex fxLayoutGap="10px" fxLayoutAlign="start center">
+                <mat-icon color="accent">check_circle</mat-icon>
+                <span>{{'login.success' | translate }}</span>
+            </div>
         </div>
     </form>
 </div>
-<div class="alert alert-success" *ngIf="isLoggedIn">
-    Logged in as {{ roles }}.
-  </div>
-<!--
-<mat-form-field appearance="standard">
-    <mat-label>Standard form field</mat-label>
-    <input matInput placeholder="Placeholder">
-    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-    <mat-hint>Hint</mat-hint>
-  </mat-form-field>
-  <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-    <mat-label>Enter some input</mat-label>
-    <input matInput #inputTest maxlength="10" placeholder="Ex. Nougat">
-    <mat-hint align="end">{{inputTest.value?.length || 0}}/10</mat-hint>
-  </mat-form-field>
-  -->
