--- a/src/app/shared/dialogs/dialog/dialog.component.html
+++ b/src/app/shared/dialogs/dialog/dialog.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>{{data.name}}</h1>
 <div mat-dialog-content>
   <mat-form-field style="width: 100%;" color="accent" >
-    <mat-label>Task number #0972</mat-label>
+    <mat-label>{{data.name}}</mat-label>
     <input matInput [(ngModel)]="data.task.content" />
   </mat-form-field>
   <mat-form-field color="accent">
@@ -10,11 +10,11 @@
     <mat-datepicker-toggle matSuffix [for]="dpicker"></mat-datepicker-toggle>
     <mat-datepicker #dpicker [disabled]="false"></mat-datepicker>
   </mat-form-field>
-  <mat-form-field color="accent">
+  <mat-form-field color="accent" class="ml-20">
     <input matInput [(ngModel)]="pickedTime" type="time" placeholder="{{'time' | translate}}">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button (click)="onNoClick()">{{ 'cancel' | translate }}</button>
-  <button mat-raised-button (click)="onClick()" cdkFocusInitial>{{'edit' | translate}}</button>
+  <button color="warn" mat-raised-button (click)="onNoClick()">{{ 'cancel' | translate }}</button>
+  <button color="accent" mat-raised-button (click)="onClick()" cdkFocusInitial>{{'edit' | translate}}</button>
 </div>
