sidebar component edited

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -21,6 +21,9 @@
     <a mat-list-item [routerLink]="['/posts']" routerLinkActive="list-item-active" >
       <mat-icon>note</mat-icon>{{ 'posts.title' | translate}}
     </a>
+    <a mat-list-item [routerLink]="['/test']" routerLinkActive="list-item-active" >
+        <mat-icon>insert_photo</mat-icon>{{ 'Test' | translate}}
+      </a>
     <mat-divider></mat-divider>
     <h2 matSubheader>Tools</h2>
     <a mat-list-item [routerLink]="['/']" routerLinkActive="list-item-active" >
